# KiCAS2-Numeric

./: .gitignore  CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: cpp_benchmarks_tests.yml  cpp_integration_tests.yml  non_vcpkg_build_with_system_libraries.yml
benchmark/: benchmark_big_num_wrapper.cpp  benchmark_native_integer.cpp  benchmark_native_rational.cpp
doc/: qtcreator_vcpkg_setup_instructions.md
include/: ki_cas_big_num_wrapper.h  ki_cas_native_integer.h  ki_cas_typesetting_flags.h
src/: ki_cas_big_num_wrapper.cpp  ki_cas_big_num_wrapper.h  ki_cas_float.h  ki_cas_integer_math.cpp  ki_cas_integer_math.h  ki_cas_native_float.cpp  ki_cas_native_float.h  ki_cas_native_integer.cpp  ki_cas_native_integer.h  ki_cas_native_rational.cpp  ki_cas_native_rational.h  ki_cas_number.cpp  ki_cas_number.h  ki_cas_str_conversions.cpp  ki_cas_str_conversions.h
test/: test_big_num_wrapper.cpp  test_integer_math.cpp  test_native_float.cpp  test_native_integer.cpp  test_native_rational.cpp  test_number.cpp  test_str_conversions.cpp
vcpkg_customisations/triplets/: arm64-linux-dynamic.cmake  x64-linux-dynamic.cmake  x64-mingw-dynamic.cmake  x64-osx-dynamic.cmake  x64-windows-dynamic.cmake  x64-windows.cmake  x86-linux-dynamic.cmake  x86-windows-dynamic.cmake  x86-windows.cmake
